	  check.
	  Bugzila: https://bugzilla.novell.com/show_bug.cgi?id=517719
	* libunimod/mloader.c: [PATCH 4/9] Add missing void argument
	  for function declarations
	* autoconf/utils.m4: [PATCH 5/9] Add missing quotes in
	  autoconf/utils.m4
	* timidity/timidity.h: [PATCH 6/9] Add the lzma decompression
	  support
	* interface/emacs_c.c: [PATCH 7/9] Fix the missing return
	  value in emacs_c.c

2012-05-29  Yair K. <cesium2@gmail.com>

	* doc/C/README.xaw, interface/TiMidity-uj.ad,
	  interface/TiMidity.ad, interface/xaw_c.c, interface/xaw_i.c,
	  interface/xaw_p.h: Make the interface apply the previous
	  volume.  It also fixes some minor display issues (remove the
	  checkmark next to hidetrace menu item when initing the trace
	  the first time after starting with '-ia' and 'Disp:Trace'
	  set to 0, don't allow activing the play button when no files
	  are loaded).
	* interface/x_trace.c, interface/x_trace.h, interface/xaw_i.c,
	  interface/xdnd.c: Fix some off by ones (one prevented the
	  channel number being displayed when muting it [right-click
	  in trace mode], another in xdnd.c led to a gcc warning with
	  -Wall), and free a bit more memory (less valgrind warnings).
	* timidity/miditrace.c: Revert fix soundspec in trace mode

2012-05-26  Hans de Goede <hdegoede@redhat.com>

	* configure.in: configure: Fix building of dynamic user
	  interfaces
	* timidity/mac_main.c, timidity/timidity.c: Add a trysource
	  config file directive
	  Add a "trysource" config file directive, which allows to try
	  and source other config files, while continuing without
	  error if the specified file is missing.
	  Also cleanup the user config loading code using this new
	  functionality.
	* interface/x_trace.c, interface/xaw_c.c: xaw-interface: Fix
	  crash when MAX_CHANNELS > 32 (by Yair K.)
	* configure.in, doc/C/README.xaw, interface/Makefile.am,
	  interface/TiMidity-uj.ad, interface/TiMidity.ad,
	  interface/x_trace.c, interface/x_trace.h, interface/xaw.h,